# nice-sat

./: .gitignore  LICENSE  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
libs/: Makefile.am  Makefile.in
libs/picosat-913/: Makefile.am  Makefile.in
src/: Main.C  Makefile.am  Makefile.in  NamedNiceSat.H  NiceSat.C  NiceSat.H  NiceSat_construction.C  doxy.conf.in  mainpage.doc
src/ADTs/: CnfExp.C  CnfExp.H  Edge.H  GlobalTable.C  GlobalTable.H  HashFuncs.C  HashFuncs.H  HashTable.H  List.H  LitVector.C  LitVector.H  Node.C  Node.H  Sort.H  Vec.H
src/Input/: AigReader.C  AigReader.H
src/Passes/: CnfPass.C  CnfPass.H  CnfPass_conjunction.C  CnfPass_disjunction.C  CountAndExpandPass.C  CountAndExpandPass.H  GraphVizPass.H  StatsPass.C  StatsPass.H
src/Solvers/: FileSolver.C  FileSolver.H  NullSolver.H  PicoSatSolver.C  PicoSatSolver.H  Solver.H
src/Support/: BitReader.C  BitReader.H  BitWriter.C  BitWriter.H  Options.C  Options.H  Reader.C  Reader.H  Shared.C  Shared.H
src/apidocs/: .gitignore
swig/: Makefile.am  Makefile.in  NiceSat.I
tests/: Makefile.in
tests/integration/: Makefile.am  Makefile.in  run-tests.sh.in
tests/integration/fast/sat/aigs/: 139442p22.kind.abcopt.aig  ken.flash^02.kind.abcopt.aig  pcip1.aig  pciptimo.aig  texastwoprocp1.aig  texastwoprocp5.aig
tests/integration/fast/unsat/aigs/: 139442p0.kind.abcopt.aig  eijk.S510.S.aig  eijk.S820.S.aig  ken.oop^1.C.aig  nusmv.tcas^2.B.aig  nusmv.tcas^3.B.aig  reduced-texas.parsesys^2.E.aig
tests/integration/unit/sat/: 10_match_bug_1.aig  10_match_bug_2.aig  10_match_bug_3.aig
tests/integration/unit/unsat/: 20_merge_duplicates.aig  20_pseudo_expand.aig
tests/unit/: Main.C  Makefile.am  Makefile.in  NamedNiceSatTests.C  NamedNiceSatTests.H  NiceSatTests.C  NiceSatTests.H  NiceSatTests_construction.C
tests/unit/ADTs/: CnfExpTests.C  CnfExpTests.H  EdgeTests.C  EdgeTests.H  HashTableTests.C  HashTableTests.H  ListTests.C  ListTests.H  LitVectorTests.C  LitVectorTests.H  NodeTests.C  NodeTests.H  VecTests.C  VecTests.H
tests/unit/Support/: BitReaderTests.C  BitReaderTests.H  BitWriterTests.C  BitWriterTests.H  TestHelpers.C  TestHelpers.H
